--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .nav-logo {
@@ -76,5 +77,24 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     color: #0F1111;
-    
+}
+.nav-search:hover {
+            border: 2px solid orange;
+}
+/** box 4 **/
+span {
+    font-size: 0.7rem;
+
+}
+.nav-second {
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+/** box6 **/
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart {
+    font-size: 0.85rem;
+    font-weight: 700;
 }
