error fix in box-content

--- a/style.css
+++ b/style.css
@@ -147,31 +147,35 @@ span {
     color: #007185;
 }
  /** shop section **/
- .shop-content {
+.shop-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: #e2e7e6;
+    background-color: #d5f1eb;
 
- }
- .box {
+}
+.box {
     /* border: 2px solid black; */
-    height: 400px;
+    height: 365px;
     width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
     margin-top: 15px;
- }
- .box-img {
+}
+.box-img {
     height: 300px;
     background-size: cover;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
- }
- .box-content {
+}
+.box-content {
     margin-left: 10px;
     margin-right: 10px;
- }
- .box-content p {
-    color: #007185;
- }
+}
+.box-content p {
+    color: #126472;
+}
+.box-content a {
+    text-decoration: none;
+    color: #126472;
+}
